# quick-clone

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODOs.md
.github/workflows/: appimage.yml  release.yml
generate/: generate-appimage.sh  qc.desktop
src/: api.cpp  api.h  main.cpp  repository.cpp  repository.h
src/app/: app.cpp  app.h  prompt.h
src/data/: api.cpp  api.h  config.cpp  config.h  repository.cpp  repository.h  resource.cpp  resource.h
